<resources>
    <string name="app_name">Bakala Bag</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Not have an Account yet? Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="signup_already_login_now">Signup already? Login now</string>
    <string name="email">Email</string>
    <string name="welcome_to_my_world">Welcome to My World</string>
    <string name="phone_no">Phone no</string>
    <string name="last_name">Last name</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="let_s_get_started">Lets get Started!</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign Up</string>
    <string name="first_name">First name</string>
    <string name="todo">TODO</string>
    <string name="the_bag_at_your_doorstep">The bag at your doorstep.</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="lets_get_verified">Lets get verified!</string>
    <string name="we_will_never_share_your_email_with_anyone">We will never share your Email with anyone</string>
    <string name="please_enter_6_digit_code_received_on_your_phone_sms">Please enter 6 digit code received on your Phone (SMS).</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="textview">TextView</string>
    <string name="bakala_bag">Bakala Bag</string>
    <string name="remember_me">Remember me</string>
    <string name="button">Button</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="share">Share</string>
    <string name="cart">Cart</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="welcome">Welcome,</string>
    <string name="info_theinternetstore_in">info@theinternetstore.in</string>
    <string name="the_internet_store">The Internet Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fruits">Fruits</string>
    <string name="veggies">Veggies</string>
    <string name="search">Search...</string>
    <string name="fresh_fruits_and_veggies">Fresh Fruits and Veggies</string>
    <string name="rupee">₹</string>
    <string name="_0_0">0.0</string>
    <string name="title">Title</string>
    <string name="add">+ Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1">1</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="img">img</string>
</resources>