<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/search_bar"-->
<!--        android:title="Search"-->
<!--        android:icon="@drawable/search"-->
<!--        app:showAsAction="always|collapseActionView"-->
<!--        app:actionViewClass="androidx.appcompat.widget.SearchView"/>-->

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/username"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="@string/cart" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_contact_us"
                    android:icon="@drawable/contactus"
                    android:title="@string/contact_us" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/share"
                    android:title="@string/share" />
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/aboutus"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/privacypolicy"
            android:title="@string/privacy_policy" />
    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nave_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>
