<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:orientation="vertical"
    android:background="@color/tab_indicator_gray"
    android:gravity="bottom"
    android:padding="20dp">



<!--    <ImageView-->
<!--        android:id="@+id/imageView4"-->
<!--        android:layout_width="189dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="end"-->
<!--        app:srcCompat="@drawable/logo_1" />-->


    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#492626"
        android:textColorHighlight="#FFFFFF"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/show_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_bhai"
        android:gravity="center"
        android:text="@string/the_internet_store"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/show_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/info_theinternetstore_in"
        android:textSize="15sp" />

</LinearLayout>