<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardUseCompatPadding="true"
    android:backgroundTint="#EAEAEA">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/cart_item_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_2" />

        <TextView
            android:id="@+id/cart_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="#373b54"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/cart_item_img"
            app:layout_constraintTop_toTopOf="@+id/cart_item_img" />


        <LinearLayout
            android:id="@+id/cart_item_plus_minus"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="13dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="@+id/cart_item_img"
            app:layout_constraintStart_toEndOf="@+id/cart_item_img">


            <ImageView
                android:id="@+id/cart_item_minusBtn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/minus" />

            <TextView
                android:id="@+id/cart_item_cartnoOfKg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="2"
                android:text="1"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Kg"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/cart_item_plusBtn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/plus" />

        </LinearLayout>

        <TextView
            android:id="@+id/cart_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/_0_0"
            android:textColor="#373b54"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cart_item_plus_minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cart_item_plus_minus" />

        <TextView
            android:id="@+id/cart_price_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/rupee"
            android:textColor="#373b54"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cart_item_price"
            app:layout_constraintEnd_toStartOf="@+id/cart_item_price"
            app:layout_constraintTop_toTopOf="@+id/cart_item_price"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/delete_item_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/remove_item_cart"
            app:layout_constraintBottom_toBottomOf="@+id/cart_item_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cart_item_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>